Fixed background being cut off from the canvas
the define size for the background was = to the canvas size. changed the
background width to 1000px. Commented out the movement of the character,
only the background moves now

--- a/Test Code/CreateJS Practice/css/styles.css
+++ b/Test Code/CreateJS Practice/css/styles.css
@@ -1,152 +1,11 @@
  General CSS */
 
 body {
-
+	margin: 			0;
+	padding: 			0;
+	font-family: 		Arial, Verdana, sans-serif;
+	font-size: 			12px;
+	font-weight:		normal;
+	color: 				#ccc;
+	background-color:	#333;
 }
-.wrapper {
-	width: 960px;
-	margin: 0 auto;
-}
-
-.game-container {
-	padding: 20px 10px;
-	background-color: #006666;
-}
-
-
-/* end general CSS */
-
-/* Game CSS */
-
-p {
-	font-family: 'Press Start 2P', cursive, Arial, sans-serif;
-	color: #F77620;
-	font-size: 16px;
-	line-height: 20px;
-}
-
-.white-text {
-	color: white;
-}
-
-
-.game-div {
-	width: 500px;
-	height: 300px;
-	margin: 0 auto;
-	position: relative;
-	background-color: rgba(50,50,50,1);
-	overflow: hidden;
-}
-
-.megaman {
-	width: 30px;
-	height: 30px;
-	overflow: hidden;
-	background-position: 150px 0px;
-	background-color: transparent;
-	background-image: url(../images/megaman.png);
-	position: absolute;
-	z-index: 9999;
-	bottom: 10px;
-	left: 0px;
-}
-
-.flipHorizontal {
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    transform: scaleX(-1);
-    -ms-filter: fliph; /*IE*/
-    filter: fliph; /*IE*/
-}
-
-/* music controls */
-/*
-.music-control {
-	height: 22px;
-	width: 140px;
-	position: absolute;
-	top: 5px;
-	right: 10px;
-	cursor: pointer;
-	z-index: 9999999999;
-	background-color: rgba(40, 40, 40, 0.6);
-	text-align: center;
-}
-
-.music-control *{
-	color: white;
-	font-size: 14px;
-	line-height: 22px;
-}
-
-.music-on {
-}
-
-.music-off {
-	display: none;
-}
-
-/* intro frame */
-/*
-.intro-frame {
-	height: 100%;
-	width: 100%;
-}
-
-.title-card {
-	width: 304px;
-	height: 69px;
-	overflow: hidden;
-	background-image: url(../images/title-sprite.png);
-	background-position: 0px 0px;
-	position: relative;
-	left: 98px;
-	top: 100px;
-}
-
-.title-ghost {
-	width: 110px;
-	height: 163px;
-	overflow: hidden;
-	background-image: url(../images/title_ghost_animation.png);
-	background-position: 0px 0px;
-	position: absolute;
-	right: -5px;
-	top: 40px;
-}
-
-.startbutton {
-	width: 150px;
-	height: 25px;
-	top: 185px;
-	right: 175px;
-	margin: 0 auto;
-	border-radius: 5px;
-	background-color: transparent;
-	text-align: center;
-	position: absolute;
-	z-index: 9999;
-	display: none;
-	cursor: pointer;
-}
-
-.startbutton:hover p{
-	color: #F77620;
-}
-
-.instructions-div {
-	text-align: center;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-}
-
-.instructions {
-	font-size: 10px;
-	padding: 5px;
-	margin: 0 auto;
-	display: none;
-}
-
